--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 15rem;
 }
 
 code {
@@ -24,4 +28,8 @@ code {
     Consolas,
     'Courier New',
     monospace;
+}
+
+h1 {
+  font-size: 50px;
 }
